V4 base - content added to subpages, vote poll added

--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="keywords" content="dew, mountain, soda, mtn dew">
+	<meta name="author" content="Josh Jaynes">
+	<meta name="description" content="Flavors of Mountain Dew">
 	<!--
 
 	Project V3
@@ -30,7 +33,7 @@
 					<ol  class="sub">
 						<li><a id= "v1" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V1/index.html" target="_blank">Project-V1<br>(New Tab)</a></li>
 						<li><a id= "v2" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V2/index.html" target="_blank">Project-V2<br>(New Tab)</a></li>
-						<!--<li><a id= "v2" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V3/index.html" target="_blank">Project-V3<br>(New Tab)</a></li>-->
+						<li><a id= "v3" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V3/index.html" target="_blank">Project-V3<br>(New Tab)</a></li>
 					</ol>
 				</li>
 			</ul>
