--- a/bahablast.html
+++ b/bahablast.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="keywords" content="dew, mountain, soda, mtn dew">
+	<meta name="author" content="Josh Jaynes">
+	<meta name="description" content="Flavors of Mountain Dew">
 	<!--
 
 
@@ -19,7 +22,7 @@
 
 
 -->
-<title>BahaBlast</title>
+<title>BajaBlast</title>
 <link href="styles.css" type="text/css" rel="stylesheet" />
 
 
@@ -66,7 +69,11 @@ footer
 
 <article>
 	<img style="margin: 2%;" src="images/mdbaha.jpg" alt="MtDewBBLogo" />
-	<h3 style="color: black; font-size: 40px;">Content Coming Soon!</h3>
+	<p style="color: white; color: black; font-size: 3em; background-color: #A0D9CB;">If you ever visited a Taco Bell, then you most likely have seen this exclusive tropical lime flavor. Recently, this flavor was actually sold in stores during promotional seasons starting in 2015.
+	</p>
+	<p>
+		<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+	</p>
 </article>
 
 	<footer id="subpage">
