--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-
+	<meta name="keywords" content="dew, mountain, soda, mtn dew">
+	<meta name="author" content="Josh Jaynes">
+	<meta name="description" content="Flavors of Mountain Dew">
 	<!--
 
 
@@ -37,7 +38,7 @@
 					<ol  class="sub">
 						<li><a id= "v1" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V1/index.html" target="_blank">Project-V1<br>(New Tab)</a></li>
 						<li><a id= "v2" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V2/index.html" target="_blank">Project-V2<br>(New Tab)</a></li>
-						<!--<li><a id= "v2" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V3/index.html" target="_blank">Project-V3<br>(New Tab)</a></li>-->
+						<li><a id= "v3" href="http://cis2.oc.ctc.edu/class/ag155.spring19/joshuajaynes/CIS155/Project/V3/index.html" target="_blank">Project-V3<br>(New Tab)</a></li>
 					</ol>
 				</li>
 			</ul>
@@ -56,14 +57,14 @@
 		<p>
 			Explore the Mountain Dew Flavors over the years of production!
 		</p>
+
 		<figure>
 			<img src="images/Mtn-Dew-Banner.png" alt="Mountain Dew Banner" />
 		</figure>
 	</aside>
 
 	<article>
-		<p id ="mobileview"> You are viewing this webpage on a mobile device less than 480px wide </p>
-		<p id ="tabview"> You are viewing this webpage on a device less than 800px wide</px>
+
 		<table>
 			<!--M6LO3 Demonstrate how to create a table (HTML, explain table's purpose; it needs to be appropriate data for a table, and have at least 2 columns and 3 rows, appropriate use of thead/tbody/tfooter, and cells using th/td appropriately)-->
 			<!-- I revamp the look of my v3 page by formatting all the content and links into a 3 column table-->
@@ -74,6 +75,10 @@
 						<!-- My "Flavor" heading is spanning across 3 columns-->
 						<p> Flavors </p>
 						<p id="subTitle">Click on the one of your choice to learn more about it!</p>
+						<p>
+
+							<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+						</p>
 					</th>
 				</tr>
 			</thead>
@@ -110,7 +115,7 @@
 				<tr>
 					<td id="bahaBlast" class="flavors">
 						<a href="bahablast.html">
-							<h2> Baha Blast </h2>
+							<h2> Baja Blast </h2>
 							<img src="images/mdbaha.jpg" alt="MtDewBBLogo" />
 						</a>
 						<p>
@@ -200,6 +205,7 @@
 			<li><a href="https://tenor.com/search/mountain-dew-gifs">https://tenor.com/search/mountain-dew-gifs</a></li>
 			<li><a href="https://www.thesitewizard.com/html-tutorial/open-links-in-new-window-or-tab.shtml"> https://www.thesitewizard.com/html-tutorial/open-links-in-new-window-or-tab.shtml"</a></li>
 			<li><a href="http://hslpicker.com"> http://hslpicker.com </a></li>
+			<li><a href="https://www.poll-maker.com/"> https://www.poll-maker.com/ </a></li>
 		</ol>
 		&nbsp;All images pulled from Mountaindew Fandom under Fair Use. Background Gif pulled from Tenor under Fair Use. <br>
 
