--- a/kickstartseries.html
+++ b/kickstartseries.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="keywords" content="dew, mountain, soda, mtn dew">
+	<meta name="author" content="Josh Jaynes">
+	<meta name="description" content="Flavors of Mountain Dew">
 	<!--
 
 
@@ -66,7 +69,11 @@ footer
 
 <article>
 	<img style="margin: 2%;"src="images/Kickstart.jpg" alt="MtDewKickLogo" />
-	<h3 style="color: black; font-size: 40px;">Content Coming Soon!</h3>
+	<p style="color: white; color: black; font-size: 3em; background-color: #ffea61;"> Mt Dew Kickstart was first introduced in 2015 with as an alternative to morning energy drinks, coffer, or even tea. This product line has become so huge, that it would take its own dedicated page to described all of the flavors.
+	</p>
+	<p>
+		<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+	</p>
 </article>
 
 	<footer id ="subpage">
