--- a/regular.html
+++ b/regular.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="keywords" content="dew, mountain, soda, mtn dew">
+	<meta name="author" content="Josh Jaynes">
+	<meta name="description" content="Flavors of Mountain Dew">
+
 	<!--
 
 
@@ -59,10 +63,14 @@
 
 
 
-<article>
-	<img style="margin: 2%;" src="images/mdregular.jpg" alt="MtDewRegLogo" />
-	<h3 style="color: black; font-size: 40px;">Content Coming Soon!</h3>
-</article>
+	<article>
+		<img style="margin: 2%;" src="images/mdregular.jpg" alt="MtDewRegLogo" />
+		<p style="color: white; font-size: 3em; background-color: black;"> Mountain Dew has been around since 1940 by Barney and Ally Hartman and was at the time a slang word for moonshine. In 1964, Pepsi acquired the rights and branding. This lemon lime beverage has become in iconic part of the soda industry and has created a cult following.
+		</p>
+		<p>
+			<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+		</p>
+	</article>
 
 	<footer id="subpage">
 
@@ -70,7 +78,7 @@
 
 
 
-			<a href="index.html">Return to Home Page</a>
+		<a href="index.html">Return to Home Page</a>
 
 
 
