--- a/voltage.html
+++ b/voltage.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="keywords" content="dew, mountain, soda, mtn dew">
+	<meta name="author" content="Josh Jaynes">
+	<meta name="description" content="Flavors of Mountain Dew">
 	<!--
 
 
@@ -66,7 +69,11 @@ footer
 
 <article>
 	<img style="margin: 2%;" src="images/mdvoltage.jpg" alt="MtDewVoltLogo" />
-	<h3 style="color: black; font-size: 40px;">Content Coming Soon!</h3>
+	<p style="color: white; font-size: 3em; background-color: #188AD9;"> Voltage is a blue-raspberry flavor and has been in production since 2008. In other parts of the world, this flavor is named Electro Shock. For a short time, this flavor was replaced with Mt Dew White Out.
+	</p>
+	<p>
+		<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+	</p>
 </article>
 
 	<footer id ="subpage">
