--- a/pitchblack.html
+++ b/pitchblack.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="keywords" content="dew, mountain, soda, mtn dew">
+	<meta name="author" content="Josh Jaynes">
+	<meta name="description" content="Flavors of Mountain Dew">
 	<!--
 
 
@@ -66,7 +69,11 @@ footer
 
 <article>
 	<img style="margin: 2%;"src="images/mdpitchblack.jpg" alt="MtDewPBLogo" />
-	<h3 style="color: black; font-size: 40px;">Content Coming Soon!</h3>
+	<p style="color: white; color:#BBA0D9; font-size: 3em; background-color: #4F1194;"> Pitch Black, introduced in 2004, has been on and off production with competing sales against the Baja Blast line. The grape contender will be a main production to the end of 2019 an onward as depicted by the sales.
+	</p>
+	<p>
+		<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+	</p>
 </article>
 
 	<footer  id="subpage">
