added CSS to form entry

--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
 			<br>
 			<!-- M7LO9 Demonstrate the use of a text area in a form -->
 			<!-- Added a comment area for users to give feedback -->
+			<p id="sField">
 			<label for="comments">Comments or Suggestions ? </label>
 			<br>
 			<textarea id="comments" rows="5" cols ="40">Write your feedback here... </textarea>
-			<br>
+		</p>
 			<!-- M7LO10 Demonstrate the use of a submit button in a form -->
 			<!-- I customize a submit button for data entry -->
 			<input type="submit" value="DoTheDew" />
