about page updated with info on V4- still pending M8 objectives

--- a/about.html
+++ b/about.html
@@ -50,7 +50,20 @@
 
 	<article id="Objectives2">
 		<h1>ABOUT PAGE</h1>
-		<strong>V3- Project- Active</strong><br>
+		<h2>Josh Jaynes</h2>
+			<h2>Class: CIS-155</h2>
+
+		<strong>V4- Project- Active -June 14th, 2019 </strong><br>
+		<ul>
+			<li>All work was conducted using GitHub and GitBash to upload</li>
+			<li>Tabluar data wasn't fixed due to heavy implemntation in V3 code</li>
+			<li>Content was added to each flavor page</li>
+			<li>Created a voting poll using poll-maker.com and linking it to my home-page</li>
+			<li>Form data and validation added for "example domain" for user submission</li>
+			<li>Pending Video and Caption
+
+		</ul>
+		<strong>V3- Project- Archive -May 21st, 2019 </strong><br>
 		<ul>
 			<li>The 3 column layout using width of ~33% was changed into a table format for V3- this was a major overhaul</li>
 			<li>-all flavors are now integrated into a table and the "Flavors" spans the 3 columns to form the header</li>
@@ -61,14 +74,14 @@
 			<li>One major area of difficulty for me: links were moving when on a mobile or tablet resolution- so I used a work around by having a new class of navigation specifically for 480px.</li>
 			<li>All pages are now mobile friendly, and adjust contents based on resolution</li>
 		</ul>
-		<strong>V2- Project- Archive</strong><br>
+		<strong>V2- Project- Archive -May 7th, 2019</strong><br>
 		<ul>
 			<li>This is my V2 webpage. I have changed a lot since V1. The layout is now in a 3x3 grid along with other cosmetic items, such as new background and image links, borders.</li>
 			<li>Based on peer reviews, I have incorporated more progessive enhancement within my page, most notably the colors used.</li>
 			<li>One major thing I want to work on for V3 is better page responsiveness. For V2,I kept messing around in Chrome Inspect to see how this would act on a phone. I kept running into issues with sizing and the 3x3 layout not adjusting properly </li>
 			<li>Images can now lead to new pages however I still need to add content to each one. </li>
 		</ul>
-		<strong>V1- Project Archive</strong><br>
+		<strong>V1- Project Archive -Apirl 23rd, 2019</strong><br>
 		<ul >
 			<li>The webpage goes over the different flavors of Moutain Dew and how each one stacks up compared to others.</li>
 			<li>V1 is acting as my skeleton webpage that will be built upon. I haven't yet added too much content regarding each flavor, but setup the framework. </li>
