--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
 			<br>
 			<label for="mailBox">Email*</label>
 			<input type="email" id="mailBox" required pattern="*+@+*.com"/>
-			<br>
+			<p id="promo">
 			<!-- M7LO6 Demonstrate the use of check boxes in a form-->
 			<!-- Added a checkbox as an optional step if user want to have promotions -->
-			<label id="checkPromo" for="checkbox">Receive Monthly Promotions? </label>
+			<label for="checkbox">Receive Monthly Promotions? </label>
 			<input type="checkbox" id="checkbox" checked/>
-			<br>
+		</p>
 			<!-- M7LO9 Demonstrate the use of a text area in a form -->
 			<!-- Added a comment area for users to give feedback -->
 			<p id="sField">
