--- a/index.html
+++ b/index.html
@@ -63,200 +63,210 @@
 		</figure>
 	</aside>
 
-	<article>
+	<div id="video">
+		<video controls poster="collage3.jpg">
 
-		<table>
+			<source src="TestVid-MTNDEW.mp4" type="video/mp4">
+				<source src="TestVid-MTNDEW.webm" type="video/webm">
+					<track label="Speech Captions" kind="subtitles" srclang="en" src="ws_captions.vtt" default>
+						<p>To support this video clip, your broswer needs to support HTML5</p>
+				</video>
+			</div>
 
-			<thead>
-				<tr>
-					<th colspan="3" id="flavors" >
-						<p> Flavors </p>
-						<p id="subTitle">Click on the one of your choice to learn more about it!</p>
-						<p>
+				<article>
 
-							<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+					<table>
+
+						<thead>
+							<tr>
+								<th colspan="3" id="flavors" >
+									<p> Flavors </p>
+									<p id="subTitle">Click on the one of your choice to learn more about it!</p>
+									<p>
+
+										<a style="color: #42f453;font-size: 1.25em; background-color: black;"  href="https://linkto.run/p/Q6U5F5FT" target="_blank">Click here to vote on the best DEW (New Tab)</a>
+									</p>
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td id="regular" class="flavors">
+									<a href="regular.html">
+										<h2> Regular </h2>
+										<img src="images/mdregular.jpg" alt="MtDewRegLogo" />
+									</a>
+									<p>
+										True to the green brand and what started it all. This product has be in production for over 80 plus years.
+									</p>
+								</td>
+								<td id="voltage" class="flavors">
+									<a href="voltage.html">
+										<h2> Voltage </h2>
+										<img src="images/mdvoltage.jpg" alt="MtDewVoltLogo" />
+									</a>
+									<p>
+										This is a raspberry citurus flavor that is colored dark blue.
+									</p>
+								</td>
+								<td id="pitchBlack" class="flavors">
+									<a href="pitchblack.html">
+										<h2> Pitch Black </h2>
+										<img src="images/mdpitchblack.jpg" alt="MtDewPBLogo" />
+									</a>
+									<p>
+										This flavor has been off and on since 2004 and is a grape-ish flavor delight.
+									</p>
+								</td>
+							</tr>
+							<tr>
+								<td id="bahaBlast" class="flavors">
+									<a href="bahablast.html">
+										<h2> Baja Blast </h2>
+										<img src="images/mdbaha.jpg" alt="MtDewBBLogo" />
+									</a>
+									<p>
+										This flavor is a Taco Bell exclusive but over the last couple of years is now available on store shelves althought with the Taco Bell logo. For taste, it can be described as a "tropical lime storm." This is in my opionion the best flavor.
+									</p>
+								</td>
+								<td id="codeRed" class="flavors">
+									<a href="codered.html">
+										<h2> Code Red </h2>
+										<img src="images/mdcodered.jpg" alt="MtDewRedLogo" />
+									</a>
+									<p>
+										The cherry flavor alternative to the green brand.
+									</p>
+								</td>
+								<td id="liveWire" class="flavors">
+									<a href="livewire.html">
+										<h2> Live Wire </h2>
+										<img src="images/mdlivewire.jpg" alt="MtDewLLLogo" />
+									</a>
+									<p>
+										More citrus but in orange. Can't go wrong.
+									</p>
+								</td>
+							</tr>
+							<tr>
+								<td id="throwBack" class="flavors">
+									<a href="throwback.html">
+										<h2> Throwback </h2>
+										<img src="images/Mountain_Dew_Throwback_Logo.jpg" alt="MtDewTBLogo" />
+										<h3 style="color: green;">&mdash; Cane Sugar&mdash;</h3>
+									</a>
+									<p>
+										I find this flavor the best of all. No high frutose cornsyrup is added but instead is made with actual cane sugar. The flavor has a more sweeter taste in my opionion. This are found in both plastic and glass bottles.
+									</p>
+								</td>
+								<td id="labelSeries" class="subflavors">
+									<a href="labelseries.html">
+										<h2> Label Series </h2>
+										<img src="images/dew_label_series_logo.jpg" alt="MtDewLabelLogo" />
+									</a>
+									<p>
+										Black, White, and Green - or Dark Berry, Tropical Citrus, and Green Apple Kiwi respectively
+									</p>
+								</td>
+								<td id="spikedSeries" class="subflavors">
+									<a href="spikedseries.html">
+										<h2> Spiked Series </h2>
+										<img src="images/mdspiked.jpg" alt="MtDewSpikedLogo" />
+									</a>
+									<p>
+										The name may suggest it is alcholic but it is not (unfortunately). These are two lemonade flavors - regular and raspberry.
+									</p>
+								</td>
+							</tr>
+							<tr>
+								<td id="kickStartSeries" class="subflavors">
+									<a href="kickstartseries.html">
+										<h2>Kickstart Series</h2>
+										<img src="images/Kickstart.jpg" alt="MtDewKickLogo" />
+									</a>
+									<p>
+										Low Carbonated, low sugar (compared to Mt Dew atleast) juice for the most part that can provide the needed jump in the morning.
+									</p>
+								</td>
+								<!-- Added expasions due to warning about last row now filling to 3 and then target the border to remove-->
+								<td id="expansion1" class="subflavors">
+								</td>
+								<td id="expansion2" class="subflavors">
+								</td>
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr>
+								<td colspan="3">Enjoy!</td>
+							</tr>
+						</tfoot>
+					</table>
+				</article>
+
+				<section>
+
+
+					<h4>
+						Enjoy Mountain Dew? Become a register fan of this page!
+					</h4>
+					<form action="http://www.example.com/cg/mtdewfan-registration" method="post">
+						Enter Your Info <br>
+
+						<p id="rField"> (* Indicates Required Field)</p>
+						<!--M7LO5 Demonstrate the use of a text box in a form-->
+						<!--Using a text box for both first and last name, allows free type into field-->
+						<label for="firstName">First Name*</label>
+						<!-- The required pattern is a-zA-z + which means the name has to be A-Z with no number and as long as desired-->
+						<input type="text" id="firstName" required pattern="[a-zA-Z]+" />
+						<br>
+						<label for="lastName">Last Name*</label>
+						<input type="text" id="lastName" required pattern="[a-zA-Z]+" />
+						<br>
+						<label for="mailBox">Email*</label>
+						<input type="email" id="mailBox" required pattern="*+@+*.com"/>
+						<p id="promo">
+							<!-- M7LO6 Demonstrate the use of check boxes in a form-->
+							<!-- Added a checkbox as an optional step if user want to have promotions -->
+							<label for="checkbox">Receive Monthly Promotions? </label>
+							<input type="checkbox" id="checkbox" checked/>
 						</p>
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td id="regular" class="flavors">
-						<a href="regular.html">
-							<h2> Regular </h2>
-							<img src="images/mdregular.jpg" alt="MtDewRegLogo" />
-						</a>
-						<p>
-							True to the green brand and what started it all. This product has be in production for over 80 plus years.
+						<!-- M7LO9 Demonstrate the use of a text area in a form -->
+						<!-- Added a comment area for users to give feedback -->
+						<p id="sField">
+							<label for="comments">Comments or Suggestions ? </label>
+							<br>
+							<textarea id="comments" rows="5" cols ="40">Write your feedback here... </textarea>
 						</p>
-					</td>
-					<td id="voltage" class="flavors">
-						<a href="voltage.html">
-							<h2> Voltage </h2>
-							<img src="images/mdvoltage.jpg" alt="MtDewVoltLogo" />
-						</a>
-						<p>
-							This is a raspberry citurus flavor that is colored dark blue.
-						</p>
-					</td>
-					<td id="pitchBlack" class="flavors">
-						<a href="pitchblack.html">
-							<h2> Pitch Black </h2>
-							<img src="images/mdpitchblack.jpg" alt="MtDewPBLogo" />
-						</a>
-						<p>
-							This flavor has been off and on since 2004 and is a grape-ish flavor delight.
-						</p>
-					</td>
-				</tr>
-				<tr>
-					<td id="bahaBlast" class="flavors">
-						<a href="bahablast.html">
-							<h2> Baja Blast </h2>
-							<img src="images/mdbaha.jpg" alt="MtDewBBLogo" />
-						</a>
-						<p>
-							This flavor is a Taco Bell exclusive but over the last couple of years is now available on store shelves althought with the Taco Bell logo. For taste, it can be described as a "tropical lime storm." This is in my opionion the best flavor.
-						</p>
-					</td>
-					<td id="codeRed" class="flavors">
-						<a href="codered.html">
-							<h2> Code Red </h2>
-							<img src="images/mdcodered.jpg" alt="MtDewRedLogo" />
-						</a>
-						<p>
-							The cherry flavor alternative to the green brand.
-						</p>
-					</td>
-					<td id="liveWire" class="flavors">
-						<a href="livewire.html">
-							<h2> Live Wire </h2>
-							<img src="images/mdlivewire.jpg" alt="MtDewLLLogo" />
-						</a>
-						<p>
-							More citrus but in orange. Can't go wrong.
-						</p>
-					</td>
-				</tr>
-				<tr>
-					<td id="throwBack" class="flavors">
-						<a href="throwback.html">
-							<h2> Throwback </h2>
-							<img src="images/Mountain_Dew_Throwback_Logo.jpg" alt="MtDewTBLogo" />
-							<h3 style="color: green;">&mdash; Cane Sugar&mdash;</h3>
-						</a>
-						<p>
-							I find this flavor the best of all. No high frutose cornsyrup is added but instead is made with actual cane sugar. The flavor has a more sweeter taste in my opionion. This are found in both plastic and glass bottles.
-						</p>
-					</td>
-					<td id="labelSeries" class="subflavors">
-						<a href="labelseries.html">
-							<h2> Label Series </h2>
-							<img src="images/dew_label_series_logo.jpg" alt="MtDewLabelLogo" />
-						</a>
-						<p>
-							Black, White, and Green - or Dark Berry, Tropical Citrus, and Green Apple Kiwi respectively
-						</p>
-					</td>
-					<td id="spikedSeries" class="subflavors">
-						<a href="spikedseries.html">
-							<h2> Spiked Series </h2>
-							<img src="images/mdspiked.jpg" alt="MtDewSpikedLogo" />
-						</a>
-						<p>
-							The name may suggest it is alcholic but it is not (unfortunately). These are two lemonade flavors - regular and raspberry.
-						</p>
-					</td>
-				</tr>
-				<tr>
-					<td id="kickStartSeries" class="subflavors">
-						<a href="kickstartseries.html">
-							<h2>Kickstart Series</h2>
-							<img src="images/Kickstart.jpg" alt="MtDewKickLogo" />
-						</a>
-						<p>
-							Low Carbonated, low sugar (compared to Mt Dew atleast) juice for the most part that can provide the needed jump in the morning.
-						</p>
-					</td>
-					<!-- Added expasions due to warning about last row now filling to 3 and then target the border to remove-->
-					<td id="expansion1" class="subflavors">
-					</td>
-					<td id="expansion2" class="subflavors">
-					</td>
-				</tr>
-			</tbody>
-			<tfoot>
-				<tr>
-					<td colspan="3">Enjoy!</td>
-				</tr>
-			</tfoot>
-		</table>
-	</article>
+						<!-- M7LO10 Demonstrate the use of a submit button in a form -->
+						<!-- I customize a submit button for data entry -->
+						<input type="submit" value="DoTheDew" />
+					</form>
+				</section>
 
-		<section>
+				<footer>
+					<strong><a id="ContentSources"> <br>&nbsp; Content Sources</a></strong>
+					<ol>
+						<li><a href="https://en.wikipedia.org/wiki/Mountain_Dew">https://en.wikipedia.org/wiki/Mountain_Dew</a></li>
+						<li><a href="https://mountaindew.fandom.com/wiki/Category:Flavor">https://mountaindew.fandom.com/wiki/Category:Flavor</a></li>
+						<li><a href="https://www.buzzfeednews.com/article/venessawong/what-is-mountain-dew">https://www.buzzfeednews.com/article/venessawong/what-is-mountain-dew</a></li>
+						<li><a href="https://tenor.com/search/mountain-dew-gifs">https://tenor.com/search/mountain-dew-gifs</a></li>
+						<li><a href="https://www.thesitewizard.com/html-tutorial/open-links-in-new-window-or-tab.shtml"> https://www.thesitewizard.com/html-tutorial/open-links-in-new-window-or-tab.shtml"</a></li>
+						<li><a href="http://hslpicker.com"> http://hslpicker.com </a></li>
+						<li><a href="https://www.poll-maker.com/"> https://www.poll-maker.com/ </a></li>
+					</ol>
+					&nbsp;All images pulled from Mountaindew Fandom under Fair Use. Background Gif pulled from Tenor under Fair Use. <br>
 
+					<figure>
+						<img src="images/mdhover.png" alt="mdlogohover" usemap="#Last" width="200" height="200">
 
-				<h4>
-				Enjoy Mountain Dew? Become a register fan of this page!
-			</h4>
-		<form action="http://www.example.com/cg/mtdewfan-registration" method="post">
-			Enter Your Info <br>
+						<figcaption>Click the logo to go back to the top!</figcaption>
+					</figure>
 
-			<p id="rField"> (* Indicates Required Field)</p>
-			<!--M7LO5 Demonstrate the use of a text box in a form-->
-			<!--Using a text box for both first and last name, allows free type into field-->
-			<label for="firstName">First Name*</label>
-			<!-- The required pattern is a-zA-z + which means the name has to be A-Z with no number and as long as desired-->
-			<input type="text" id="firstName" required pattern="[a-zA-Z]+" />
-			<br>
-			<label for="lastName">Last Name*</label>
-			<input type="text" id="lastName" required pattern="[a-zA-Z]+" />
-			<br>
-			<label for="mailBox">Email*</label>
-			<input type="email" id="mailBox" required pattern="*+@+*.com"/>
-			<p id="promo">
-			<!-- M7LO6 Demonstrate the use of check boxes in a form-->
-			<!-- Added a checkbox as an optional step if user want to have promotions -->
-			<label for="checkbox">Receive Monthly Promotions? </label>
-			<input type="checkbox" id="checkbox" checked/>
-		</p>
-			<!-- M7LO9 Demonstrate the use of a text area in a form -->
-			<!-- Added a comment area for users to give feedback -->
-			<p id="sField">
-			<label for="comments">Comments or Suggestions ? </label>
-			<br>
-			<textarea id="comments" rows="5" cols ="40">Write your feedback here... </textarea>
-		</p>
-			<!-- M7LO10 Demonstrate the use of a submit button in a form -->
-			<!-- I customize a submit button for data entry -->
-			<input type="submit" value="DoTheDew" />
-		</form>
-		</section>
+					<map name="Last">
+						<area shape="circle" coords="50,190,160" href="#top" alt="to top of page">
+					</map>
 
-	<footer>
-		<strong><a id="ContentSources"> <br>&nbsp; Content Sources</a></strong>
-		<ol>
-			<li><a href="https://en.wikipedia.org/wiki/Mountain_Dew">https://en.wikipedia.org/wiki/Mountain_Dew</a></li>
-			<li><a href="https://mountaindew.fandom.com/wiki/Category:Flavor">https://mountaindew.fandom.com/wiki/Category:Flavor</a></li>
-			<li><a href="https://www.buzzfeednews.com/article/venessawong/what-is-mountain-dew">https://www.buzzfeednews.com/article/venessawong/what-is-mountain-dew</a></li>
-			<li><a href="https://tenor.com/search/mountain-dew-gifs">https://tenor.com/search/mountain-dew-gifs</a></li>
-			<li><a href="https://www.thesitewizard.com/html-tutorial/open-links-in-new-window-or-tab.shtml"> https://www.thesitewizard.com/html-tutorial/open-links-in-new-window-or-tab.shtml"</a></li>
-			<li><a href="http://hslpicker.com"> http://hslpicker.com </a></li>
-			<li><a href="https://www.poll-maker.com/"> https://www.poll-maker.com/ </a></li>
-		</ol>
-		&nbsp;All images pulled from Mountaindew Fandom under Fair Use. Background Gif pulled from Tenor under Fair Use. <br>
+				</footer>
+			</body>
 
-		<figure>
-			<img src="images/mdhover.png" alt="mdlogohover" usemap="#Last" width="200" height="200">
-
-			<figcaption>Click the logo to go back to the top!</figcaption>
-		</figure>
-
-		<map name="Last">
-			<area shape="circle" coords="50,190,160" href="#top" alt="to top of page">
-		</map>
-
-	</footer>
-</body>
-
-</html>
+			</html>
