clear html error

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<br>
 										<!--M8LO9  Demonstrate the use of the iframe element -->
 										<!-- addes a frame for the voting poll -->
-										<iframe width"200" height="150" name="vote" id="poll" src="https://linkto.run/p/Q6U5F5FT">
+										<iframe width="200" height="150" name="vote" id="poll" src="https://linkto.run/p/Q6U5F5FT">
 										</iframe>
 									</p>
 								</th>
