cleared warning about headings in article

--- a/codered.html
+++ b/codered.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;" src="images/mdcodered.jpg" alt="MtDewRedLogo" />
+		<h1>Code Red</h1>
 	<p style="color: white; font-size: 3em; background-color: #ab2112;"> Code Red is often in an intense argument, described as the best flavor of Mountain Dew.  Due to the success of the cherry flavored Mt Dew,  it led to the launch of all the other product lines since 2001.
 	</p>
 	<p>
