--- a/kickstartseries.html
+++ b/kickstartseries.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;"src="images/Kickstart.jpg" alt="MtDewKickLogo" />
+		<h1>KickStart</h1>
 	<p style="color: white; color: black; font-size: 3em; background-color: #ffea61;"> Mt Dew Kickstart was first introduced in 2015 with as an alternative to morning energy drinks, coffer, or even tea. This product line has become so huge, that it would take its own dedicated page to described all of the flavors.
 	</p>
 	<p>
