--- a/labelseries.html
+++ b/labelseries.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;" src="images/dew_label_series_logo.jpg" alt="MtDewLabelLogo" />
+		<h1>Label Series</h1>
 	<p style="color: white; color: black; font-size: 3em; background-color: white;"> This side line of Dew consist of three great flavors, Dark Berry, Tropical, and Green Apple Kiwi.
 	</p>
 	<p>
