--- a/livewire.html
+++ b/livewire.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;"src="images/mdlivewire.jpg" alt="MtDewLLLogo" />
+		<h1>Live Wire</h1>
 	<p style="color: white; font-size: 3em; background-color: #ED8C31;"> This product has the name suggest, is an orange flavored Mt Dew that was released in 2003 due to the success of the Code Red deviant.
 	</p>
 	<p>
