--- a/pitchblack.html
+++ b/pitchblack.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;"src="images/mdpitchblack.jpg" alt="MtDewPBLogo" />
+		<h1>Pitch Black</h1>
 	<p style="color: white; color:#BBA0D9; font-size: 3em; background-color: #4F1194;"> Pitch Black, introduced in 2004, has been on and off production with competing sales against the Baja Blast line. The grape contender will be a main production to the end of 2019 an onward as depicted by the sales.
 	</p>
 	<p>
