--- a/regular.html
+++ b/regular.html
@@ -65,6 +65,7 @@
 
 	<article>
 		<img style="margin: 2%;" src="images/mdregular.jpg" alt="MtDewRegLogo" />
+			<h1>Regular</h1>
 		<p style="color: white; font-size: 3em; background-color: black;"> Mountain Dew has been around since 1940 by Barney and Ally Hartman and was at the time a slang word for moonshine. In 1964, Pepsi acquired the rights and branding. This lemon lime beverage has become in iconic part of the soda industry and has created a cult following.
 		</p>
 		<p>
