--- a/spikedseries.html
+++ b/spikedseries.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;" src="images/mdspiked.jpg" alt="MtDewSpikedLogo" />
+		<h1>Spiked Series</h1>
 	<p style="color: white; color: black; font-size: 3em; background-color: yellow;"> The spiked series contains two lemonade flavors- Raspberry Lemonade and just plain that are slightly carbonated and totally awesome.
 	</p>
 	<p>
