--- a/throwback.html
+++ b/throwback.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;"src="images/Mountain_Dew_Throwback_Logo.jpg" alt="MtDewTBLogo" />
+		<h1>Throwback</h1>
 	<p style="color: white; font-size: 3em; background-color: #75C591;"> This is the original formula made with actual cane sugar and contains the original logo and mascot on the bottle or can- “the hillbilly.”
 	</p>
 	<p>
