--- a/bahablast.html
+++ b/bahablast.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;" src="images/mdbaha.jpg" alt="MtDewBBLogo" />
+	<h1>Baja Blast</h1>
 	<p style="color: white; color: black; font-size: 3em; background-color: #A0D9CB;">If you ever visited a Taco Bell, then you most likely have seen this exclusive tropical lime flavor. Recently, this flavor was actually sold in stores during promotional seasons starting in 2015.
 	</p>
 	<p>
