--- a/voltage.html
+++ b/voltage.html
@@ -69,6 +69,7 @@ footer
 
 <article>
 	<img style="margin: 2%;" src="images/mdvoltage.jpg" alt="MtDewVoltLogo" />
+		<h1>Voltage</h1>
 	<p style="color: white; font-size: 3em; background-color: #188AD9;"> Voltage is a blue-raspberry flavor and has been in production since 2008. In other parts of the world, this flavor is named Electro Shock. For a short time, this flavor was replaced with Mt Dew White Out.
 	</p>
 	<p>
